[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wkhtmltopdf-pack"
version = "0.99"
description = "wkhtmltopdf 0.12.3.0 for Python on Heroku buildpacks"
readme = "README.rst"
authors = [{ name = "illarra", email = "team@illarra.com" }]
license = { text = "MIT" }
keywords = ["pdf", "wkhtmltopdf", "paas", "heroku", "cloudcontrol", "buildpack"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { "Homepage" = "https://github.com/illarra/wkhtmltopdf-pack" }
